# lifeos-cli

./: README.md  pyproject.toml
.cursor/rules/: lifeos-cli.mdc
skills/lifeos-cli/: SKILL.md
skills/lifeos-cli/agents/: openai.yaml
skills/lifeos_cli/: SKILL.md
src/lifeos_cli/: __init__.py  errors.py  http_client.py  main.py  output.py  schema.py
tests/: test_cli.py
